[package]
name = "fruent-test-rs"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true}
failure = "=0.1.1"
fruently = "=0.9.1"
serde = "=1.0.23"
serde_json = "=1.0.7"
structopt = "=0.1.6"
structopt-derive = "=0.1.6"

[features]
default = []
